fixed color contrast for different screens

--- a/app/globals.css
+++ b/app/globals.css
@@ -7,7 +7,7 @@
 }
 
 html.dark{
-  --background: #415a77;
+  --background: #384d66;
   --foreground: #e0e1dd;
   --card : #0d1b2a;
 
